--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,26 @@
 <p>
   Home Works!
+  <button md-raised-button class="md-raised">Button</button>
 </p>
+<md-card>
+    <md-card-title>Basic grid list</md-card-title>
+    <md-card-content class="demo-basic-list">
+      <md-grid-list cols="4" [rowHeight]="basicRowHeight">
+        <md-grid-tile> One </md-grid-tile>
+        <md-grid-tile> Two </md-grid-tile>
+        <md-grid-tile> Three </md-grid-tile>
+        <md-grid-tile> Four </md-grid-tile>
+      </md-grid-list>
+    </md-card-content>
+  </md-card>
+ <md-card>
+    <md-card-header>
+      <img md-card-avatar>
+      <md-card-title>Header title</md-card-title>
+      <md-card-subtitle>Header subtitle</md-card-subtitle>
+    </md-card-header>
+    <img md-card-image src="https://material.angularjs.org/latest/img/washedout.png">
+    <md-card-content>
+      <p>Here is some content</p>
+    </md-card-content>
+  </md-card>
