--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
   <md-grid-tile>
     <md-card>
       <md-card-content class="demo-basic-list">
-        <img md-card-image src="https://material.angularjs.org/latest/img/washedout.png">
+        <img md-card-image src="{{imageData}}">
       </md-card-content>
     </md-card>
   </md-grid-tile>
