--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,35 +1,7 @@
-<md-grid-list
-  cols="4"
-  rowHeight="fit"
-  [gutterSize]="ratioGutter"
-  [style.height]="fitListHeight"
->
-  <md-grid-tile>
-    <md-card>
-      <md-card-content class="demo-basic-list">
-        <img md-card-image src="{{imageData}}">
-      </md-card-content>
-    </md-card>
-  </md-grid-tile>
-  <md-grid-tile>
-    <md-card>
-      <md-card-content class="demo-basic-list">
-        <img md-card-image src="https://material.angularjs.org/latest/img/washedout.png">
-      </md-card-content>
-    </md-card>
-  </md-grid-tile>
-  <md-grid-tile>
-    <md-card>
-      <md-card-content class="demo-basic-list">
-        <img md-card-image src="https://material.angularjs.org/latest/img/washedout.png">
-      </md-card-content>
-    </md-card>
-  </md-grid-tile>
-  <md-grid-tile>
-    <md-card>
-      <md-card-content class="demo-basic-list">
-        <img md-card-image src="https://material.angularjs.org/latest/img/washedout.png">
-      </md-card-content>
-    </md-card>
-  </md-grid-tile>
-</md-grid-list>
+<div *ngFor="let person of persons;">
+  <label>{{person.name}}</label>
+  <div *ngFor="let image of person.images">
+    <img src={{getPrefixed(image.encoded)}}>
+    <!--{{prefix + image.encoded}}-->
+  </div>
+</div>
